# api-correios

./: LICENSE  README.md  pyproject.toml
.github/workflows/: poetry-build-publish.yml
api_correios/: APICorreios.py  __init__.py
api_correios/schema/: correios.py
api_correios/utils/: token.py
tests/: test_api_correios.py
