[tool.poetry]
name = "api-correios"
version = "0.2.1"
description = ""
authors = ["Bruno Souza <bruno.souza@zaxapp.com.br>"]

[tool.poetry.dependencies]
python = "^3.6.12"
requests = "^2.28.1"
pydantic = "^1.9.1"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node\_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
